# CXL-Memory-Compression-Simulator

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  RouterEditor.json  RouterEditorLayout.ini  imgui.ini
deviceConfigurations/: default.json  updated.json  updated2.json
src/: block.cpp  block.h  blockInput.cpp  blockInput.h  device.h  loggerBlock.h  main.cpp  request.cpp  request.h  router.cpp  router.h  routing.cpp  sram.h  sramCache.h
src/gui/: routerEditor.cpp  routerEditor.h  simulatorPanel.cpp  simulatorPanel.h
src/impl/: compressedStorage.h  compressor.h  decompressor.h  dramDataCache.h  loggerBlock.h  metadataTable.h  routing.cpp  sramCache.h
src/serialization/: deviceConfigSerialization.cpp  deviceConfigSerialization.h
src/simulator/: block.cpp  block.h  blockInput.h  device.cpp  device.h  request.cpp  request.h  router.cpp  router.h
src/simulator/impl/: compressedStorage.h  compressor.h  decompressor.h  dramDataCache.h  loggerBlock.h  metadataTable.h  routing.cpp  sramCache.h
