cmake_minimum_required(VERSION 3.10)
project(Simple-CXL-Simulator VERSION 0.0.1 LANGUAGES CXX)

set(CMAKE_CXX_STANDARD 20)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_EXPORT_COMPILE_COMMANDS ON)

# Paths
set(SOURCE_DIR "${CMAKE_SOURCE_DIR}/src")

# Sources
file(GLOB_RECURSE PROJECT_SOURCES CONFIGURE_DEPENDS
    "${SOURCE_DIR}/*.cpp"
)

# Executable
add_executable(${PROJECT_NAME} ${PROJECT_SOURCES})

include(cmake/CPM.cmake)
include(ExternalProject)

CPMAddPackage(
	NAME SDL3
	GITHUB_REPOSITORY libsdl-org/SDL
	GIT_TAG d9ca0457b5c9f819c3af5f156880219c8d41da40
	OPTIONS
		"SDL_STATIC ON"
		"SDL_UNIX_CONSOLE_BUILD ON"
	EXCLUDE_FROM_ALL YES
)
add_library(SDL3::SDL3 ALIAS SDL3-static)
list(APPEND EXTERNAL_LINKS SDL3::SDL3)

target_link_libraries(${PROJECT_NAME} PRIVATE ${EXTERNAL_LINKS})
